--- a/sign in.html
+++ b/sign in.html
@@ -14,10 +14,10 @@
       <div class="btn">
           <h6>already a member?<a href="sign in.html">sign in</a> </h6>
           <h1>Sign up to Dribble</h1>  
-          <button><a href="#" class="fa fa-google"></a> signup with google</button>
+          <button  id="fa"><a href="#" class="fa fa-google"></a> signup with google</button>
           <button><a href="#" class="fa fa-twitter"></a></button>
           <button><a href="#" class="fa fa-facebook"></a></button>
-          <h2>--------  or ----------   </h2>
+          <h2> <hr><span>Or</span><hr>  </h2>
       </div>
       
       
