--- a/sign in.html
+++ b/sign in.html
@@ -27,7 +27,8 @@
        </div>
        <div class="input4">
           <span>password</span> <br>
-          <input type="password" name="">
+          <input placeholder="6+ characters" type="password" name="">
+          
        </div>
        <div class="tick">
           <label><input type="checkbox" name="">   
