--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
      </div>
      <div class="input4">
         <span>password</span> <br>
-        <input type="password" name="">
+        <input placeholder="6+ characters" type="password" name="">
      </div>
      <div class="tick">
         <label><input type="checkbox" name="">   
